finished FHA page for now

--- a/fha.html
+++ b/fha.html
@@ -103,10 +103,59 @@
 
 	<div class="divider"></div>
 
-	<div class="panel" id="summary">
-		<h2 class="left">Preliminary Research</h2>
+	<div class="panel" id="user research">
+		<h2 class="left">User Research</h2>
 			<div class="body right">
+				<p>With the initial branding refresh wrapped up, we turned to the research phase of the larger engagement. We took a three step approach:</p>
+				<ul>
+					<li>Heuristic evaluation – analyze current state of the FHA website experience </li>
+					<li>Stakeholder Interviews – semi-structured conversations to understand FHA priorities</li>
+					<li>User Interviews – semi-structured conversations to understand user needs and preferences, pain points, and usability issues</li>
+				</ul> 
+				<h3>Heuristic Evaluation</h3>
+				<div class="short-divider"></div>
+				<p>Pages were selected for evaluation based on browsing data from March 1 – May 12, 2020. We chose to look at the top 11 viewed FHA-related pages on HUD.gov. We used the <a href="https://uitraps.com/">Tenets & Traps</a> framework to call out problem areas. Here are two key takeaways:
+				<ul>
+					<li>Information overload or information "under-load" - most pages are used as link farms, while other pages only have a few sentences of text.</li>
+					<li>Consistent inconsistency - type, color, and UI elements are not used consistently (see below for some examples).</li>
+				</ul> 
+				</p>
+				<img src="pics/FHA/HUD-UI.png" class="pic-right" style="background-color: white; width: 70%">
+				<h3>Stakeholder Interviews</h3>
+				<div class="short-divider"></div>
+				<p>We held 10 semi-structured interviews. Our goal was to speak with participants that represented a breadth of FHA stakeholder perspectives, so we interviewed the main FHA Program Office & Communication leads: Single Family Housing, Multifamily Housing, Healthcare, Risk, Finance & Budget. We also spoke with folks who run the FHA Resource Center, FHA's main FAQ vehicle.</p>
+
+				<h4>Analysis Process</h4>
+				<p>After each interview, I reviewed my notes and filled in any gaps from the video recording. I highlighted key phrases and quotes. As interviews proceeded, I started noting patterns and creating notional organizational buckets. When all the interviews were complete, I swept through all the transcripts multiple times to refine my categories and themes. Finally, I packaged these insights into a slide deck. I created in-depth case studies for each program office, which I called 'Program Profiles,' and I also summarized the key themes running through each case.</p>
+
+<!-- 				<h4>Key Findings</h4>
+				<ul>
+					<li>Organize around user needs, not HUD's org chart (current state).</li>
+					<li>Provide an easier way to access information that is currently buried in long PDF handbooks or spread out across various sections of the site.</li>
+					<li>Leverage existing resources like Housing Counselors and the Resource Center to connect users with the help they need. Provide avenues to escalate specific questions sooner in the process for those who know exactly what they need help with.</li>
+					<li>Continue to make housing and healthcare accessible to vulnerable populations by creating a friendlier web presence for consumers. While FHA stakeholders view their business partners as their primary audience across the board, they all spoke about supporting low-income and first-time homebuyers as their core mission.</li>
+					<li>To build trust in the FHA brand, create a cohesive experience within program offices by applying consistent visual identity, content standards, and layouts. To facilitate stakeholder interactions, follow industry standards observed across competitor sites by using consistent processes, terminology, and organization patterns.</li>
+					<li>Define a clear, intuitive, and logical scope for FHA.gov vs. HUD.gov content. This is especially important for program offices that span across both organizations.</li>
+				</ul> -->
+
+
 			</div>
+	</div>
+
+	<div class="full-width">
+		<div class="panel dark">
+			<img class="pic-left" src="pics/FHA/stakeholder-interview-process.png">
+		</div>
+	</div>
+
+	<div class="panel" id="user interviews">
+		<div class="body right">
+			<h3>User Interviews</h3>
+			<div class="short-divider"></div>
+			<p>Next on the docket is user interviews. FHA users vary significantly across several dimensions, including their relationship with FHA (business stakeholders vs. consumers), experience with the various mortgage processes, system understanding, and technology comfort. We plan to conduct one-on-one interviews with a maximum variation sample of a variety of user groups, including consumers and business stakeholders across the Single Family, Multifamily, and Healthcare programs.</p>
+
+			<p>More coming soon!</p>
+		</div>
 	</div>
 	  	
   	<div id="footer"></div>
