updated mobile styles

--- a/fha.html
+++ b/fha.html
@@ -123,7 +123,7 @@
 				<img src="pics/FHA/HUD-UI.png" class="pic-right" style="background-color: white; width: 70%">
 				<h3>Stakeholder Interviews</h3>
 				<div class="short-divider"></div>
-				<p>We held 10 semi-structured interviews. Our goal was to speak with participants that represented a breadth of FHA stakeholder perspectives, so we interviewed the main FHA Program Office & Communication leads: Single Family Housing, Multifamily Housing, Healthcare, Risk, Finance & Budget. We also spoke with folks who run the FHA Resource Center, FHA's main FAQ vehicle.</p>
+				<p>Our goal was to speak with participants that represented a breadth of FHA stakeholder perspectives, so we interviewed the main FHA Program Office & Communication leads: Single Family Housing, Multifamily Housing, Healthcare, Risk, Finance & Budget. We also spoke with folks who run the FHA Resource Center, FHA's main customer service vehicle.</p>
 
 				<h4>Analysis Process</h4>
 				<p>After each interview, I reviewed my notes and filled in any gaps from the video recording. I highlighted key phrases and quotes. As interviews proceeded, I started noting patterns and creating notional organizational buckets. When all the interviews were complete, I swept through all the transcripts multiple times to refine my categories and themes. Finally, I packaged these insights into a slide deck. I created in-depth case studies for each program office, which I called 'Program Profiles,' and I also summarized the key themes running through each case.</p>
