--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 		<div class="large-space"></div>
 
 		<h3>
-			Hope you enjoy checking out my projects. If you'd like to get in touch, you can hit me up on <a href="linkedin.com/in/emilyporat">LinkedIn</a>, or drop me a line via <a href="mailto:emporat@gmail.com">email</a>. 
+			Hope you enjoy checking out my projects. If you'd like to get in touch, you can hit me up on <a href="https://linkedin.com/in/emilyporat">LinkedIn</a>, or drop me a line via <a href="mailto:emporat@gmail.com">email</a>. 
 		</h3>
 	</div>
 	<img src="pics/about/emily4.jpg" id="home-pic">
@@ -100,7 +100,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 			<h4>Summer 2020 • Deloitte Digital</h4>
 			<h2 style="color: #FE7062">FHA Website Redesign</h2>
 			<div class="short-divider"></div>
-			<h3>Part one of a larger effort to completely overhaul FHA.gov. In this short-term phase, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
+			<h3>As part one of a larger effort to completely overhaul FHA.gov, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
 			<button onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
 				<h4 style="color: black">Learn More</h4>
 			</button>
