--- a/fha.html
+++ b/fha.html
@@ -50,7 +50,7 @@
 
 	<div class="panel context">
 		<div class="context-summary">
-			<h4>Context</h4>
+			<h2>Context</h2>
 			<h3>
 				As part one of a larger effort to completely overhaul FHA.gov, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.
 			<h3>
@@ -74,7 +74,7 @@
 	<div class="divider"></div>
 
 	<div class="panel" id="summary">
-		<h2 class="left">Branding Refresh</h2>
+		<h2 class="body right">Branding Refresh</h2>
 			<div class="body right">
 				<p>Before the long-term engagement began, step one was launching FHA.gov as a standalone site from its parent agency's site, HUD.gov. At that time, all FHA content was housed within various sections of HUD.gov. When it came to branding and style for the new FHA.gov, we had a couple of options. Another Deloitte team had already conducted a branding workshop and developed mood boards and social media guidance for FHA Catalyst, one of FHA's ongoing technology modernization initiatives, so I developed two style guides(see below): one with the original HUD branding, refreshed, and one with the FHA Catalyst branding, adapted from existing mood boards.</p>
 
@@ -97,14 +97,14 @@
 					<li>Highlight boxes to make key information easier to pick out, catering to the human tendency to scan rather than read.</li>
 					<li>An interactive table of contents to provide an overview and easy page navigation so users can jump right to relevant topics.</li>
 				</ul>
-				<img src="pics/FHA/COVID.png" class="pic-right" alt="The COVID-19 Resources page on FHA.gov.">
+				<img src="pics/FHA/COVID.png" class="pic-right" alt="The COVID-19 Resources page on FHA.gov." style="background-color: white">
 			</div>
 	</div>
 
 	<div class="divider"></div>
 
 	<div class="panel" id="user research">
-		<h2 class="left">User Research</h2>
+		<h2 class="body right">User Research</h2>
 			<div class="body right">
 				<p>With the initial branding refresh wrapped up, we turned to the research phase of the larger engagement. We took a three step approach:</p>
 				<ul>
@@ -157,6 +157,60 @@
 			<p>More coming soon!</p>
 		</div>
 	</div>
+
+<div id="projects">
+
+	<div class="divider"></div>
+	<h1>More Projects</h1>
+	
+	<!-- Featured project -->
+	<div class="section" style="margin-top: 5%">
+		<img class="project-pic" src="pics/pos-small.png"  style="background-color: #F29407">
+		<div class="project-info">
+			<h4>Fall 2019 • Deloitte Digital</h4>
+			<h2 style="color: #F29407">Food Management System</h2>
+			<div class="short-divider"></div>
+			<h3>I redesigned key features of the interface that government workers will use to provide food to nearly 100,000 low-income individuals.</h3>
+			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page" style="background-color: white">
+				<h4 style="color: black">Learn More</h4>
+			</button>
+		</div>
+	</div>
+
+	<div class="divider"></div>
+
+	<!-- Featured project -->
+	<div class="section">
+		<img src="pics/l&d.png" class="project-pic" style="background-color: #8D63B0; float: right">
+		<div class="project-info" style="float: left; margin-left: 0">
+			<h4>Summer 2018 • Deloitte Digital</h4>
+			<h2 style="color: #8D63B0">Learning & Development Portal</h2>
+			<div class="short-divider"></div>
+			<h3>During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</h3>	
+			<button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page" style="background-color: white">
+				<h4 style="color: black">Learn More</h4>
+			</button>
+		</div>
+	</div>
+
+	<div class="divider"></div>
+
+	<!-- Featured project -->
+	<div href="rsvpd.html">
+	<div class="section">
+		<img src="pics/rsvpd.png" class="project-pic" style="background-color: #3C845E;">
+		<div class="project-info">
+			<h4>Fall 2018 • Carnegie Mellon University</h4>
+			<h2 style="color: #3C845E">RSVP'd</h2>
+			<div class="short-divider"></div>
+			<h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
+			<button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page" style="background-color: white">
+				<h4 style="color: black">Learn More</h4>
+			</button>
+		</div>
+	</div>
+	</div>
+</div>
 	  	
   	<div id="footer"></div>
   	</meta>
