--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,4 @@
-<div id="contact">
-  <div class="divider" style="background-color: #858585; margin-bottom: 5%"></div>
+<div id="contact" class="full-width">
   
   <div id="container">
     <div class="contact-text" style="width: 40vw; margin-left: 0">
@@ -7,20 +6,22 @@
       <h2 style="color: #8D63B0">UX Designer</h2>
     </div>
 
-    <div class="contact-text">
-      <h3>Projects</h3>
-        <p><a href="fha.html">FHA Website Redesign</a></p>
-        <p><a href="fms-pos.html">Food Management System</a></p>
-        <p><a href="rsvpd.html">RSVP'd</a></p>
-        <p><a href="l&d.html">L&D Portal</a></p>
-    </div>
-     
-    <div class="contact-text">
-      <h3>Contact</h3>
-        <p><a href="mailto:emporat@gmail.com" target="_top">emporat@gmail.com</a></p>
-        <p style="color: white">(650) 996 - 8836</p>
-        <p><a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a> |  <a href="resume.pdf">Resume</a></p>
-    </div>
+    <div class="footer-links" style="float: right">
+      <div class="contact-text">
+        <h3>Projects</h3>
+          <p><a href="fha.html">FHA Website Redesign</a></p>
+          <p><a href="fms-pos.html">Food Management System</a></p>
+          <p><a href="rsvpd.html">RSVP'd</a></p>
+          <p><a href="l&d.html">L&D Portal</a></p>
+      </div>
+       
+      <div class="contact-text">
+        <h3>Contact</h3>
+          <p><a href="mailto:emporat@gmail.com" target="_top">emporat@gmail.com</a></p>
+          <p style="color: white">(650) 996 - 8836</p>
+          <p><a href="https://www.linkedin.com/in/emilyporat/">LinkedIn</a> |  <a href="resume.pdf">Resume</a></p>
+      </div>
+  </div>
   </div>
   <p id="copyright">© Emily Porat 2020</p>
 </div>
