--- a/footer.html
+++ b/footer.html
@@ -1,12 +1,12 @@
 <div id="contact">
   
   <div id="container">
-    <div class="contact-text">
+    <div class="contact-text" style="margin: 0">
       <h2 style="color: #F29407">Emily Porat</h2> 
       <h2 style="color: #8D63B0">UX Designer</h2>
     </div>
 
-    <div class="footer-links" style="float: right; display: inline-block;">
+    <div id="footer-links">
       <div class="contact-text">
         <h3>Projects</h3>
           <p><a href="fha.html">FHA Website Redesign</a></p>
