tweaked About section spacing

--- a/index.html
+++ b/index.html
@@ -70,15 +70,19 @@ $('#footer').load('http://emilyporat.com/footer.html');
 		<h3>I live in Washington, DC and work at Deloitte Digital, primarily with federal government clients. I take pride in the mission-oriented work my job affords me: a lot of our projects center around improving technology systems for aid programs. Over the past year, I’ve learned some important lessons that have contributed to my design philosphy:</h3>
 		<div class="space"></div>
 
-		<h4>Make pragmatic choices</h4>
+		<h4>Pragmatism wins</h4>
 		<p>
 			There's a spectrum of possibility and never enough time, resources, or budget to get everything 100% right. As designers, we need to pick our battles, understand the user's needs and priorities, and do what we can to serve those needs while working within the constraints of the real world.
 		</p>
 
-		<h4>Strong team, strong product</h4>
+		<div class="space"></div>
+
+		<h4>Design is a team sport</h4>
 		<p>
 			An integral part of any project is working with functional and technical teammates to assess level of effort, technical complexity, and overall feasibility of the designs. Because, at the end of the day, a pixel-perfect design is nothing without stakeholder buy-in and working code.
 		</p>
+
+		<div class="space"></div>
 
 		<h4>Wield power wisely</h4>
 		<p>
