made linkedin link open in new tab

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 		<div class="large-space"></div>
 
 		<h3>
-			Hope you enjoy checking out my projects. If you'd like to get in touch, you can hit me up on <a href="https://linkedin.com/in/emilyporat">LinkedIn</a>, or drop me a line via <a href="mailto:emporat@gmail.com">email</a>. 
+			Hope you enjoy checking out my projects. If you'd like to get in touch, you can hit me up on <a href="https://linkedin.com/in/emilyporat"  target="_blank" >LinkedIn</a>, or drop me a line via <a href="mailto:emporat@gmail.com">email</a>. 
 		</h3>
 	</div>
 	<img src="pics/about/emily4.jpg" id="home-pic">
