fixed broken link in rsvpd

--- a/rsvpd.html
+++ b/rsvpd.html
@@ -152,7 +152,7 @@
 	  		<div class="body right">
 	  			<div class="space"></div>
 	  			<h3>Affinity Diagram Output</h3>
-	  			<p>After speaking with 10+ users, I pulled out 80+ insights from interview notes and survey results. I facilitated the diagramming session and built out a <a href="pics/rsvpd/affinity.pdf">detailed report that lays out our findings</a>. These are the top-level takeaways from our research phase:</p>
+	  			<p>After speaking with 10+ users, I pulled out 80+ insights from interview notes and survey results. I facilitated the diagramming session and built out a <a href="pics/rsvpd/affinity-results.pdf" target="_blank">detailed report that lays out our findings</a>. These are the top-level takeaways from our research phase:</p>
 	  			<ul>
 					<li>People are intrinsically motivated by their personal passions.</li>
 					<li>Friendships influence decision making.</li>
