updated green color to be brighter

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@ $('#footer').load('http://emilyporat.com/footer.html');
 	<!-- Featured project -->
 	<div href="rsvpd.html">
 	<div class="section">
-		<img src="pics/rsvpd.png" class="project-pic" style="background-color: #3C845E; float: right">
+		<img src="pics/rsvpd.png" class="project-pic" style="background-color: #18b276; float: right">
 		<div class="project-info" style="float: left; margin-left: 0">
 			<h4>Fall 2018 • Carnegie Mellon University</h4>
-			<h2 style="color: #3C845E">RSVP'd</h2>
+			<h2 style="color: #18b276">RSVP'd</h2>
 			<div class="short-divider"></div>
 			<h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
 			<button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page" style="background-color: white">
