--- a/rsvpd.html
+++ b/rsvpd.html
@@ -35,7 +35,7 @@
     <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-      	<div class="full-width" style="background-color: #3C845E; height: 65vh; margin-top: 120px">
+      	<div class="full-width" style="background-color: #18b276; height: 65vh; margin-top: 120px">
 	  	<div class="title-wrapper animate-reveal animate-first">
             <div class="title">
             	<div>
