made variables for colors, fixed mobile bug

--- a/fha.html
+++ b/fha.html
@@ -35,7 +35,7 @@
 	<div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>	
 
-	<div class="full-width" style="background-color: #FE7062; height: 75vh; margin-top: 120px">
+	<div class="full-width" style="background-color: var(--pink); height: 75vh; margin-top: 120px">
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
@@ -165,10 +165,10 @@
 	
 	<!-- Featured project -->
 	<div class="section" style="margin-top: 5%">
-		<img class="project-pic" src="pics/pos-small.png"  style="background-color: #F29407">
+		<img class="project-pic" src="pics/pos-small.png"  style="background-color: var(--orange)">
 		<div class="project-info">
 			<h4>Fall 2019 • Deloitte Digital</h4>
-			<h2 style="color: #F29407">Food Management System</h2>
+			<h2 style="color: var(--orange)">Food Management System</h2>
 			<div class="short-divider"></div>
 			<h3>I redesigned key features of the interface that government workers will use to provide food to nearly 100,000 low-income individuals.</h3>
 			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page" style="background-color: white">
@@ -181,10 +181,10 @@
 
 	<!-- Featured project -->
 	<div class="section">
-		<img src="pics/l&d.png" class="project-pic" style="background-color: #8D63B0; float: right">
+		<img src="pics/l&d.png" class="project-pic" style="background-color: var(--purple); float: right">
 		<div class="project-info" style="float: left; margin-left: 0">
 			<h4>Summer 2018 • Deloitte Digital</h4>
-			<h2 style="color: #8D63B0">Learning & Development Portal</h2>
+			<h2 style="color: var(--purple)">Learning & Development Portal</h2>
 			<div class="short-divider"></div>
 			<h3>During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</h3>	
 			<button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page" style="background-color: white">
@@ -198,10 +198,10 @@
 	<!-- Featured project -->
 	<div href="rsvpd.html">
 	<div class="section">
-		<img src="pics/rsvpd.png" class="project-pic" style="background-color: #3C845E;">
+		<img src="pics/rsvpd.png" class="project-pic" style="background-color: var(--green);">
 		<div class="project-info">
 			<h4>Fall 2018 • Carnegie Mellon University</h4>
-			<h2 style="color: #3C845E">RSVP'd</h2>
+			<h2 style="color: var(--green)">RSVP'd</h2>
 			<div class="short-divider"></div>
 			<h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
 			<button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page" style="background-color: white">
