--- a/fms-pos.html
+++ b/fms-pos.html
@@ -35,7 +35,7 @@
 	<div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>	
 
-	<div class="full-width" style="background-color: #F29407; height: 75vh; margin-top: 120px">
+	<div class="full-width" style="background-color: var(--orange); height: 75vh; margin-top: 120px">
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
@@ -93,7 +93,7 @@
 					The legacy system was long overdue for an upgrade. It had a number of inefficiencies that forced users to change their business processes to match the system. For example, some organizations ordered their physical stores around the (un-sortable) catalog provided in the legacy system to make data entry easier.
 				</p>
 				<p>
-					One of my focus areas was designing an intuitive POS system that can serve every user well. Designing this interface was complex for a few reasons (see <a href="#research" style="color: #F29407">Research Insights</a> section below for more):
+					One of my focus areas was designing an intuitive POS system that can serve every user well. Designing this interface was complex for a few reasons (see <a href="#research">Research Insights</a> section below for more):
 					<ul>
 						<li>Technical limitations - Salesforce isn't meant to be a POS, and our users are not using touchscreen devices (for the web channel). The most difficult technical requirement was handling barcode scanning.</li>
 						<li>Government-imposed limits on each food category - these limits have to be displayed and monitored so that users don't exceed them.</li>
@@ -276,7 +276,7 @@
 			<h3>How it Works</h3>
 				<p>The shopping interface combines the functionality of several legacy interfaces in to one streamlined process. It provides flexibility transition between organizational models and workflows.</p>
 				
-				<p>There are two business processes for checking customers out: store concept and manual (explained above, in <a href="#research" style="color: #F29407">Research Insights</a>). Users are assigned a primary model, but can switch if needed.</p>
+				<p>There are two business processes for checking customers out: store concept and manual (explained above, in <a href="#research">Research Insights</a>). Users are assigned a primary model, but can switch if needed.</p>
 
 				<p>Manual mode provides one simple table-centric interface, and the store mode provides two interfaces for data entry: Search and QuickScan. Search is meant for users who prefer to find items by searching, sorting, and filtering. Users can still scan items in search mode.</p>
 
@@ -563,7 +563,7 @@
 			
 			<div class="space"></div>
 				
-            <div style="padding: 5%; background-color: #161818">
+            <div style="padding: 5%; background-color: var(--darkgray)">
                 <h4>Testimonials</h4>		
                 <div class="last"><div class="short-divider"></div></div>
                 <p>"[Team Member] and I have frequently shared notes about how impressed we were by what you learned in a short time. I remember that meeting where you walked us through your wireframes for [feature] in mid-January. We were both impressed by your rationale for various UX choices. You have really developed a valuable skill blending the UI/UX craft with the Salesforce and iOS platforms." - Senior Manager, Deloitte Digital</p>
@@ -582,10 +582,10 @@
 	
 	<!-- Featured project -->
 	<div class="section" style="margin-top: 5%">
-		<img class="project-pic" src="pics/fha.png" style="background-color: #FE7062">
+		<img class="project-pic" src="pics/fha.png" style="background-color: var(--pink)">
 		<div class="project-info">
 			<h4>Summer 2020 • Deloitte Digital</h4>
-			<h2 style="color: #FE7062">FHA Branding Refresh</h2>
+			<h2 style="color: var(--pink)">FHA Branding Refresh</h2>
 			<div class="short-divider"></div>
 			<h3>Part one of a larger effort to completely overhaul FHA.gov. In this short-term phase, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
 			<button onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
@@ -598,10 +598,10 @@
 
 	<!-- Featured project -->
 	<div class="section">
-		<img src="pics/l&d.png" class="project-pic" style="background-color: #8D63B0; float: right">
+		<img src="pics/l&d.png" class="project-pic" style="background-color: var(--purple); float: right">
 		<div class="project-info" style="float: left; margin-left: 0">
 			<h4>Summer 2018 • Deloitte Digital</h4>
-			<h2 style="color: #8D63B0">Learning & Development Portal</h2>
+			<h2 style="color: var(--purple)">Learning & Development Portal</h2>
 			<div class="short-divider"></div>
 			<h3>During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</h3>	
 			<button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page" style="background-color: white">
@@ -615,10 +615,10 @@
 	<!-- Featured project -->
 	<div href="rsvpd.html">
 	<div class="section">
-		<img src="pics/rsvpd.png" class="project-pic" style="background-color: #3C845E;">
+		<img src="pics/rsvpd.png" class="project-pic" style="background-color: var(--green);">
 		<div class="project-info">
 			<h4>Fall 2018 • Carnegie Mellon University</h4>
-			<h2 style="color: #3C845E">RSVP'd</h2>
+			<h2 style="color: var(--green)">RSVP'd</h2>
 			<div class="short-divider"></div>
 			<h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
 			<button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page" style="background-color: white">
