--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 	<div id="intro">
 		<h3>Hey there. My name is</h3>
-		<h1 style="color: #F29407">Emily Porat</h1>
+		<h1 style="color: var(--orange)">Emily Porat</h1>
 		<div class="large-space"></div>
 
 		<h3>Congrats! You've found my portfolio of work as a</h3>
-		<h1 style="color: #8D63B0">UX Designer</h1>
+		<h1 style="color: var(--purple)">UX Designer</h1>
 		<div class="large-space"></div>
 
 		<h3>
@@ -64,7 +64,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 <div id="about">
 	 
-	<h1 style="color: #FE7062">About</h1>
+	<h1 style="color: var(--pink)">About</h1>
 	<div class="short-divider"></div>
 
 		<h3>I live in Washington, DC and work at Deloitte Digital, primarily with federal government clients. I take pride in the mission-oriented work my job affords me: a lot of our projects center around improving technology systems for aid programs. Over the past year, I’ve learned some important lessons that have contributed to my design philosphy:</h3>
@@ -97,10 +97,10 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 	<!-- Featured project -->
 	<div class="section" style="margin-top: 5%">
-		<img class="project-pic" src="pics/fha.png" style="background-color: #FE7062">
+		<img class="project-pic" src="pics/fha.png" style="background-color: var(--pink)">
 		<div class="project-info">
 			<h4>Summer 2020 • Deloitte Digital</h4>
-			<h2 style="color: #FE7062">FHA Website Redesign</h2>
+			<h2 style="color: var(--pink)">FHA Website Redesign</h2>
 			<div class="short-divider"></div>
 			<h3>As part one of a larger effort to completely overhaul FHA.gov, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
 			<button onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
@@ -113,10 +113,10 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 	<!-- Featured project -->
 	<div class="section">
-		<img class="project-pic" src="pics/pos-small.png"  style="background-color: #F29407; float: right">
+		<img class="project-pic" src="pics/pos-small.png"  style="background-color: var(--orange); float: right">
 		<div class="project-info" style="float: left; margin-left: 0">
 			<h4>Fall 2019 • Deloitte Digital</h4>
-			<h2 style="color: #F29407">Food Management System</h2>
+			<h2 style="color: var(--orange)">Food Management System</h2>
 			<div class="short-divider"></div>
 			<h3>I redesigned key features of the interface that government workers will use to provide food to nearly 100,000 low-income individuals.</h3>
 			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page" style="background-color: white">
@@ -129,10 +129,10 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 	<!-- Featured project -->
 	<div class="section">
-		<img src="pics/l&d.png" class="project-pic" style="background-color: #8D63B0">
+		<img src="pics/l&d.png" class="project-pic" style="background-color: var(--purple)">
 		<div class="project-info">
 			<h4>Summer 2018 • Deloitte Digital</h4>
-			<h2 style="color: #8D63B0">Learning & Development Portal</h2>
+			<h2 style="color: var(--purple)">Learning & Development Portal</h2>
 			<div class="short-divider"></div>
 			<h3>During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</h3>	
 			<button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page" style="background-color: white">
@@ -146,10 +146,10 @@ $('#footer').load('http://emilyporat.com/footer.html');
 	<!-- Featured project -->
 	<div href="rsvpd.html">
 	<div class="section">
-		<img src="pics/rsvpd.png" class="project-pic" style="background-color: #18b276; float: right">
+		<img src="pics/rsvpd.png" class="project-pic" style="background-color: var(--green); float: right">
 		<div class="project-info" style="float: left; margin-left: 0">
 			<h4>Fall 2018 • Carnegie Mellon University</h4>
-			<h2 style="color: #18b276">RSVP'd</h2>
+			<h2 style="color: var(--green)">RSVP'd</h2>
 			<div class="short-divider"></div>
 			<h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
 			<button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page" style="background-color: white">
