--- a/l&d.html
+++ b/l&d.html
@@ -36,12 +36,12 @@
     <div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 	
-		<div class="full-width" style="background-color: #8D63B0; height: 70vh; margin-top: 120px">
+		<div class="full-width" style="background-color: var(--purple); height: 70vh; margin-top: 120px">
 		  	<div class="title-wrapper animate-reveal animate-first">
 	            <div class="title">
 	                <div>
 	                	<h4>Summer 2018 • Deloitte Digital</h4>
-	                	<h1>L&D Portal</h1>
+	                	<h1 style="color: black">Learning & Development Portal</h1>
 	            	</div>
 	            </div>
 		  	</div>
@@ -315,10 +315,10 @@
 	<div class="divider"></div>
 	<h1>More Projects</h1>
 	<div class="section" style="margin-top: 5%">
-		<img class="project-pic" src="pics/fha.png" style="background-color: #FE7062">
+		<img class="project-pic" src="pics/fha.png" style="background-color: var(--pink)">
 		<div class="project-info">
 			<h4>Summer 2020 • Deloitte Digital</h4>
-			<h2 style="color: #FE7062">FHA Branding Refresh</h2>
+			<h2 style="color: var(--pink)">FHA Branding Refresh</h2>
 			<div class="short-divider"></div>
 			<h3>Part one of a larger effort to completely overhaul FHA.gov. In this short-term phase, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
 			<button onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
@@ -330,10 +330,10 @@
 	<div class="divider"></div>
 	<!-- Featured project -->
 	<div class="section">
-		<img class="project-pic" src="pics/pos-small.png"  style="background-color: #F29407; float: right">
+		<img class="project-pic" src="pics/pos-small.png"  style="background-color: var(--orange); float: right">
 		<div class="project-info" style="float: left; margin-left: 0">
 			<h4>Fall 2019 • Deloitte Digital</h4>
-			<h2 style="color: #F29407">Food Management System</h2>
+			<h2 style="color: var(--orange)">Food Management System</h2>
 			<div class="short-divider"></div>
 			<h3>I redesigned key features of the interface that government workers will use to provide food to nearly 100,000 low-income individuals.</h3>
 			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page" style="background-color: white">
@@ -347,10 +347,10 @@
 	<!-- Featured project -->
 	<div href="rsvpd.html">
 	<div class="section">
-		<img src="pics/rsvpd.png" class="project-pic" style="background-color: #3C845E;">
+		<img src="pics/rsvpd.png" class="project-pic" style="background-color: var(--green);">
 		<div class="project-info">
 			<h4>Fall 2018 • Carnegie Mellon University</h4>
-			<h2 style="color: #3C845E">RSVP'd</h2>
+			<h2 style="color: var(--green)">RSVP'd</h2>
 			<div class="short-divider"></div>
 			<h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
 			<button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page" style="background-color: white">
