--- a/rsvpd.html
+++ b/rsvpd.html
@@ -35,7 +35,7 @@
     <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-      	<div class="full-width" style="background-color: #18b276; height: 65vh; margin-top: 120px">
+      	<div class="full-width" style="background-color: var(--green); height: 65vh; margin-top: 120px">
 	  	<div class="title-wrapper animate-reveal animate-first">
             <div class="title">
             	<div>
@@ -261,7 +261,7 @@
 
 	  		<p>Testers all agreed that RSVP'd promotes accountability, makes attending events easier, and is easy to use.</p>
 
-                <div style="background-color: #161818; padding: 5%; color: white">
+                <div style="background-color: var(--darkgray); padding: 5%; color: white">
                     <h4>Testimonials</h4>		
                     <div class="last"><p class="short-divider"></p></div>
                     <p>"I’m doing pretty well ... [the app] makes me want to have a better score and be more accountable."</p>
@@ -279,10 +279,10 @@
 	<h1>More Projects</h1>
 
 	<div class="section" style="margin-top: 5%">
-		<img class="project-pic" src="pics/fha.png" style="background-color: #FE7062">
+		<img class="project-pic" src="pics/fha.png" style="background-color: var(--pink)">
 		<div class="project-info">
 			<h4>Summer 2020 • Deloitte Digital</h4>
-			<h2 style="color: #FE7062">FHA Branding Refresh</h2>
+			<h2 style="color: var(--pink)">FHA Branding Refresh</h2>
 			<div class="short-divider"></div>
 			<h3>Part one of a larger effort to completely overhaul FHA.gov. In this short-term phase, I designed a new landing page and applied fresh branding to select pages of the Federal Housing Administration's website.</h3>
 			<button onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
@@ -295,10 +295,10 @@
 
 	<!-- Featured project -->
 	<div class="section">
-		<img class="project-pic" src="pics/pos-small.png"  style="background-color: #F29407; float: right">
+		<img class="project-pic" src="pics/pos-small.png"  style="background-color: var(--orange); float: right">
 		<div class="project-info" style="float: left; margin-left: 0">
 			<h4>Fall 2019 • Deloitte Digital</h4>
-			<h2 style="color: #F29407">Food Management System</h2>
+			<h2 style="color: var(--orange)">Food Management System</h2>
 			<div class="short-divider"></div>
 			<h3>I redesigned key features of the interface that government workers will use to provide food to nearly 100,000 low-income individuals.</h3>
 			<button onclick="location.href='fms-pos.html';" value="Go to Food Management System project page" style="background-color: white">
@@ -311,10 +311,10 @@
 
 	<!-- Featured project -->
 	<div class="section">
-		<img src="pics/l&d.png" class="project-pic" style="background-color: #8D63B0">
+		<img src="pics/l&d.png" class="project-pic" style="background-color: var(--purple)">
 		<div class="project-info">
 			<h4>Summer 2018 • Deloitte Digital</h4>
-			<h2 style="color: #8D63B0">Learning & Development Portal</h2>
+			<h2 style="color: var(--purple)">Learning & Development Portal</h2>
 			<div class="short-divider"></div>
 			<h3>During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</h3>	
 			<button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page" style="background-color: white">
