updated hero photo

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 			Hope you enjoy checking out my projects. If you'd like to get in touch, you can hit me up on <a href="https://linkedin.com/in/emilyporat"  target="_blank" >LinkedIn</a>, or drop me a line via <a href="mailto:emporat@gmail.com">email</a>. 
 		</h3>
 	</div>
-	<img src="pics/about/emily4.jpg" id="home-pic">
+	<img src="pics/about/emily4.png" id="home-pic">
 </div>
 
 <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
