updated about section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 		<div class="large-space"></div>
 
 		<h3>
-			Hope you enjoy checking out my projects. If you'd like to get in touch, you can hit me up on <a href="https://linkedin.com/in/emilyporat"  target="_blank" >LinkedIn</a>, or drop me a line via <a href="mailto:emporat@gmail.com">email</a>. 
+			Scroll on to learn a little more about me and check out my featured projects. If you'd like to get in touch, you can hit me up on <a href="https://linkedin.com/in/emilyporat"  target="_blank" >LinkedIn</a> or drop me a line via <a href="mailto:emporat@gmail.com">email</a>. 
 		</h3>
 	</div>
 	<img src="pics/about/emily4.png" id="home-pic">
@@ -67,12 +67,13 @@ $('#footer').load('http://emilyporat.com/footer.html');
 	<h1 style="color: var(--pink)">About</h1>
 	<div class="short-divider"></div>
 
-		<h3>I live in Washington, DC and work at Deloitte Digital, primarily with federal government clients. I take pride in the mission-oriented work my job affords me: a lot of our projects center around improving technology systems for aid programs. Over the past year, I’ve learned some important lessons that have contributed to my design philosphy:</h3>
+		<h3>I live in Washington, DC and work at Deloitte Digital, primarily with federal government clients.</h3>
+		<p>I take pride in the mission-oriented work my job affords me: a lot of our projects center around improving technology systems for aid programs. Over the past year, I’ve learned some important lessons that have contributed to my design philosphy:</p>
 		<div class="space"></div>
 
 		<h4>Pragmatism wins</h4>
 		<p>
-			There's a spectrum of possibility and never enough time, resources, or budget to get everything 100% right. As designers, we need to pick our battles, understand the user's needs and priorities, and do what we can to serve those needs while working within the constraints of the real world.
+			There's a spectrum of possibility and never enough time, resources, or budget to get everything 100% right. As designers, we have a responsibility to understand the user's needs and do all we can to give voice to those needs while balancing the constraints of the real world.
 		</p>
 
 		<div class="space"></div>
