tweaked purple color, added alt text on home page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 			Scroll on to learn a little more about me and check out my featured projects. If you'd like to get in touch, you can hit me up on <a href="https://linkedin.com/in/emilyporat"  target="_blank" >LinkedIn</a> or drop me a line via <a href="mailto:emporat@gmail.com">email</a>. 
 		</h3>
 	</div>
-	<img src="pics/about/emily4.png" id="home-pic">
+	<img src="pics/about/emily4.png" id="home-pic" alt="Headshot of Emily, smiling and looking to the right">
 </div>
 
 <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
@@ -98,7 +98,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 	<!-- Featured project -->
 	<div class="section" style="margin-top: 5%">
-		<img class="project-pic" src="pics/fha.png" style="background-color: var(--pink)">
+		<img class="project-pic" src="pics/fha.png" style="background-color: var(--pink)" alt="A screenshot of the FHA.gov home page">
 		<div class="project-info">
 			<h4>Summer 2020 • Deloitte Digital</h4>
 			<h2 style="color: var(--pink)">FHA Website Redesign</h2>
@@ -114,7 +114,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 	<!-- Featured project -->
 	<div class="section">
-		<img class="project-pic" src="pics/pos-small.png"  style="background-color: var(--orange); float: right">
+		<img class="project-pic" src="pics/pos-small.png"  style="background-color: var(--orange); float: right" alt="A screenshot of a point of sale system on a Salesforce desktop interface and an iPad interface">
 		<div class="project-info" style="float: left; margin-left: 0">
 			<h4>Fall 2019 • Deloitte Digital</h4>
 			<h2 style="color: var(--orange)">Food Management System</h2>
@@ -130,7 +130,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 	<!-- Featured project -->
 	<div class="section">
-		<img src="pics/l&d.png" class="project-pic" style="background-color: var(--purple)">
+		<img src="pics/l&d.png" class="project-pic" style="background-color: var(--purple)" alt="A screenshot of a Deloitte Digital site called the Learning and Development portal">
 		<div class="project-info">
 			<h4>Summer 2018 • Deloitte Digital</h4>
 			<h2 style="color: var(--purple)">Learning & Development Portal</h2>
@@ -147,7 +147,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 	<!-- Featured project -->
 	<div href="rsvpd.html">
 	<div class="section">
-		<img src="pics/rsvpd.png" class="project-pic" style="background-color: var(--green); float: right">
+		<img src="pics/rsvpd.png" class="project-pic" style="background-color: var(--green); float: right" alt="A screenshot of a mobile app with an accountability score and timeline of previous events that led to the score.">
 		<div class="project-info" style="float: left; margin-left: 0">
 			<h4>Fall 2018 • Carnegie Mellon University</h4>
 			<h2 style="color: var(--green)">RSVP'd</h2>
